tests/patching/errors/replace_oob.dby
import std.buffer as buf
let b = buf.new(3)
buf.replace(b, 2, b"\x01\x02")
